# domhunt

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  pages.yml
docs/: index.html
src/domhunt/: __init__.py  __main__.py  checker.py  cli.py  prices.py  suggester.py  tlds.py  web.py
src/domhunt/static/: index.html
tests/: test_checker.py  test_cli.py  test_prices.py  test_suggester.py  test_tlds.py  test_web.py
