[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domhunt"
version = "0.1.0"
description = "Check domain name availability across many TLDs in one command, from your terminal or your browser."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "domhunt contributors" }]
keywords = ["domain", "tld", "whois", "rdap", "cli", "domain-search", "availability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "httpx>=0.27",
]

[project.scripts]
domhunt = "domhunt.cli:main"
domhunt-web = "domhunt.web:run"

[project.urls]
Homepage = "https://github.com/syntaxixr/domhunt"
Repository = "https://github.com/syntaxixr/domhunt"
Issues = "https://github.com/syntaxixr/domhunt/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/domhunt"]

[tool.hatch.build.targets.wheel.shared-data]
"src/domhunt/static" = "domhunt/static"

[tool.hatch.build]
include = [
    "src/domhunt/**/*.py",
    "src/domhunt/static/*.html",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
